--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'Xiang Lis Home Page'
+title: 'idealee\'s blog'
 description: 'Welcome to my personal blog. Have fun!'
 keyword: 'Courses, Research, Personal, Blog, Xiang Li'
 url: '' # your host
@@ -21,13 +21,13 @@ nav:
 
 # Footer
 footer:
-  since: 2017
+  since: 2024
 
 # Author 配置博主信息
 author: 'Xiang Li'
-nickname: 'llllllimitedX'
+nickname: 'idealee'
 bio: 'Undergraduate Student at Kuang Yaming Honors School, Nanjing University, China'
-avatar: '/assets/img/profile.png'
+avatar: '/assets/img/frog.png'
 
 # Search
 search: true
@@ -56,10 +56,10 @@ postPatterns: 'circuitBoard'
 # SNS settings 配置社交网站
 # url: email, weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
 sns:
-  weibo: '//weibo.com/lovecolcol'
-  juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
-  instagram: '//www.instagram.com/steveliaocn'
-  github: '//github.com/kaeyleo'
+  email: 'e308655794@163.com'
+  zhihu: '308655794'
+  facebook: 'space.bilibili.com/32773300'
+  github: '//github.com/llllllimitedX'
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
@@ -80,7 +80,6 @@ kramdown:
 RSS: false
 
 # Permalink
-# See: https://github.com/kaeyleo/jekyll-theme-H2O/issues/35
 permalink: /:year/:month/:day/:title.html
 
 # Plugins
