--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer:
 author: 'Xiang Li'
 nickname: 'idealee'
 bio: 'Undergraduate Student at Kuang Yaming Honors School, Nanjing University, China'
-avatar: '/assets/img/frog.png'
+avatar: '/assets/img/frog.jpg'
 
 # Search
 search: true
