--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'idealee\'s blog'
+title: 'idealee Blog'
 description: 'Welcome to my personal blog. Have fun!'
 keyword: 'Courses, Research, Personal, Blog, Xiang Li'
 url: '' # your host
